--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             4. เกณฑ์มาตรฐานที่ 4 กิจกรรมส่งเสริมสุขภาพ<br />
             5. เกณฑ์มาตรฐานที่ 5 กิจกรรมบูรณาการสู่การเรียนการสอน<br />
             6. เกณฑ์มาตรฐานที่ 6 การสนับสนุนชมรม/ชุมนุม อย.น้อย<br />
-            7. เกณฑ์มาตรฐานที่ 7 กิจกรรมพิเศษอื่น ๆ<br /><br /><br>
+            7. เกณฑ์มาตรฐานที่ 7 กิจกรรมพิเศษอื่น ๆ<br /><br /><br />
           </p>
 
           <p class="pnormal" style="text-indent: 2rem">
@@ -256,34 +256,87 @@
     <div>
       <h1 class="topic">ผลงานที่ภาคภูมิใจ</h1>
 
-      <div class="card-grid">
-        <div class="card">
-          <img
-            src="https://img5.pic.in.th/file/secure-sv1/S__27844618.jpg"
-            alt=""
-          />
-          <h3>รางวัล Best Practice ด้านสื่อสร้างสรรค์ (1)</h3>
-          <p>
-            โรงเรียนพิบูลมังสาหาร จ.อุบลราชธานี
-            สังกัดองค์การบริหารส่วนจังหวัดอุบลราชธานี ได้เข้าร่วมประกวด Best
-            Practice ด้านสื่อสร้างสรรค์ (Creativity) จากโครงการ "อย.น้อยพิบูล
-            สร้างสื่อดีรู้เท่าทัน เลือกผลิตภัณฑ์สุขภาพอย่างฉลาด"
-            ภายใต้ความร่วมมือกับกระทรวงสารารณสุขโดยมีเป้าหมายเพื่อส่งเสริมให้นักเรียนรู้เท่าทันสื่อ
-            เลือกบริโภคผลิตภัณฑ์สุขภาพอย่างปลอดภัย
-          </p>
+      <div>
+        <div class="card-grid">
+          <div class="card">
+            <img
+              src="https://img5.pic.in.th/file/secure-sv1/page-1.png"
+              alt=""
+            />
+            <h3>
+              <a href="reward.html"
+                >รางวัล Best of the best ด้านสื่อสร้างสรรค์ 2025</a
+              >
+            </h3>
+            <p>
+              ชมรม อย.น้อย โรงเรียนพิบูลมังสาหาร ได้รับโล่รางวัล
+              ผลงานเครือข่ายโดดเด่นยอดเยี่ยม Best of the best 2025
+              โดยมีตัวแทนนักเรียนแกนนำ อย.น้อย เข้าร่วมการแข่งขันในครั้งนี้
+              จำนวน 6 คน ในวันที่ 19-20 มิถุนายน 2568 ณ โรงแรมเซนทารา
+              ศูนย์ราชการและคอนเวนชันเซ็นเตอร์ แจ้งวัฒนะ กรุงเทพฯ
+              โดยมีนายแพทย์โอภาส การย์กวินพงศ์ ปลัดกระทรวงสาธารณสุข เป็นประธาน
+              ทั้งนี้มีชุมชน (บวร.ร.) และสถานศึกษา (โรงเรียน อย.น้อย)
+              ที่มีผลการดำเนินงานโดดเด่น (BEST PRACTICE) เข้าร่วมคัดเลือก จำนวน
+              65 แห่งทั่วประเทศ
+            </p>
+          </div>
+          <div class="card">
+            <img
+              src="https://img2.pic.in.th/pic/image123f86a24de15431b90.png"
+              alt=""
+            />
+            <h3>
+              <a href="reward.html"
+                >รางวัล Best Practice ด้านสื่อสร้างสรรค์ 2025</a
+              >
+            </h3>
+            <p>
+              ชมรม อย.น้อย โรงเรียนพิบูลมังสาหาร ได้รับโล่รางวัล
+              ผลงานเครือข่ายโดดเด่นยอดเยี่ยม Best Practice 2025
+              โดยมีตัวแทนนักเรียนแกนนำ อย.น้อย เข้าร่วมการแข่งขันในครั้งนี้
+              จำนวน 6 คน ในวันที่ 19-20 มิถุนายน 2568 ณ โรงแรมเซนทารา
+              ศูนย์ราชการและคอนเวนชันเซ็นเตอร์ แจ้งวัฒนะ กรุงเทพฯ
+              โดยมีนายแพทย์โอภาส การย์กวินพงศ์ ปลัดกระทรวงสาธารณสุข เป็นประธาน
+              ทั้งนี้มีชุมชน (บวร.ร.) และสถานศึกษา (โรงเรียน อย.น้อย)
+              ที่มีผลการดำเนินงานโดดเด่น (BEST PRACTICE) เข้าร่วมคัดเลือก จำนวน
+              65 แห่งทั่วประเทศ
+            </p>
+          </div>
         </div>
 
-        <div class="card">
-          <img src="https://img2.pic.in.th/pic/S__27844616.jpg" />
-          <h3>รางวัล Best Practice ด้านสื่อสร้างสรรค์ (2)</h3>
-          <p>
-            โรงเรียนพิบูลมังสาหาร จังหวัดอุบลราชธานี
-            ได้รับการคัดเลือกให้เป็นสถานศึกษา
-            ที่มีการดำเนินงานสร้างความรอบรู้ด้านผลิตภัณฑ์สุขภาพโดดเด่นได้รับรางวัล
-            Best Practice ระดับประเทศ ในด้าน "สื่อสร้างสรรค์"
-            จากสำนักงานคณะกรรมการอาหารและยา (อย.)
-            โดยได้รับการประเมินผ่านเกณฑ์ระดับประเทศที่มีคะแนนรวมมากกว่า 80 คะแนน
-          </p>
+        <div>
+          <div class="card-grid">
+            <div class="card">
+              <img
+                src="https://img5.pic.in.th/file/secure-sv1/S__27844618.jpg"
+                alt=""
+              />
+              <h3>รางวัล Best Practice ด้านสื่อสร้างสรรค์</h3>
+              <p>
+                โรงเรียนพิบูลมังสาหาร จ.อุบลราชธานี
+                สังกัดองค์การบริหารส่วนจังหวัดอุบลราชธานี ได้เข้าร่วมประกวด Best
+                Practice ด้านสื่อสร้างสรรค์ (Creativity) จากโครงการ
+                "อย.น้อยพิบูล สร้างสื่อดีรู้เท่าทัน
+                เลือกผลิตภัณฑ์สุขภาพอย่างฉลาด"
+                ภายใต้ความร่วมมือกับกระทรวงสารารณสุขโดยมีเป้าหมายเพื่อส่งเสริมให้นักเรียนรู้เท่าทันสื่อ
+                เลือกบริโภคผลิตภัณฑ์สุขภาพอย่างปลอดภัย
+              </p>
+            </div>
+
+            <div class="card">
+              <img src="https://img2.pic.in.th/pic/S__27844616.jpg" />
+              <h3>รางวัล Best Practice ด้านสื่อสร้างสรรค์</h3>
+              <p>
+                โรงเรียนพิบูลมังสาหาร จังหวัดอุบลราชธานี
+                ได้รับการคัดเลือกให้เป็นสถานศึกษา
+                ที่มีการดำเนินงานสร้างความรอบรู้ด้านผลิตภัณฑ์สุขภาพโดดเด่นได้รับรางวัล
+                Best Practice ระดับประเทศ ในด้าน "สื่อสร้างสรรค์"
+                จากสำนักงานคณะกรรมการอาหารและยา (อย.)
+                โดยได้รับการประเมินผ่านเกณฑ์ระดับประเทศที่มีคะแนนรวมมากกว่า 80
+                คะแนน
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
